feat: finalize AI news pipeline and deployment hardening